trivial: fix up the description of a TRC curve

--- a/data/gcm-viewer.ui
+++ b/data/gcm-viewer.ui
@@ -993,7 +993,7 @@
                       <object class="GtkLabel" id="label7">
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
-                        <property name="label" translatable="yes">A transfer response curve shows the profile response</property>
+                        <property name="label" translatable="yes">A tone reproduction curve is the mapping of scene luminance to display luminance</property>
                       </object>
                       <packing>
                         <property name="expand">False</property>
