--- a/data/gcm-viewer.ui
+++ b/data/gcm-viewer.ui
@@ -22,9 +22,8 @@
               <object class="GtkVBox" id="vbox_profiles">
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
-                <property name="spacing">6</property>
                 <child>
-                  <object class="GtkScrolledWindow" id="scrolledwindow2">
+                  <object class="GtkScrolledWindow" id="scrolledwindow_profiles">
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
                     <property name="hscrollbar_policy">never</property>
@@ -47,44 +46,48 @@
                   </packing>
                 </child>
                 <child>
-                  <object class="GtkHBox" id="hbox45">
+                  <object class="GtkToolbar" id="toolbar_profiles">
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
-                    <property name="spacing">6</property>
+                    <property name="show_arrow">False</property>
+                    <property name="icon_size">1</property>
                     <child>
-                      <object class="GtkButton" id="button_profile_import">
-                        <property name="label" translatable="yes">_Add…</property>
+                      <object class="GtkToolButton" id="toolbutton_profile_import">
                         <property name="visible">True</property>
-                        <property name="can_focus">True</property>
-                        <property name="receives_default">True</property>
+                        <property name="can_focus">False</property>
+                        <property name="has_tooltip">True</property>
+                        <property name="tooltip_markup" translatable="yes">Add a profile for the device</property>
+                        <property name="tooltip_text">Add a profile for the device</property>
                         <property name="use_action_appearance">False</property>
                         <property name="use_underline">True</property>
+                        <property name="icon_name">list-add-symbolic</property>
                       </object>
                       <packing>
                         <property name="expand">False</property>
-                        <property name="fill">True</property>
-                        <property name="position">0</property>
+                        <property name="homogeneous">True</property>
                       </packing>
                     </child>
                     <child>
-                      <object class="GtkButton" id="button_profile_delete">
-                        <property name="label" translatable="yes">_Remove</property>
+                      <object class="GtkToolButton" id="toolbutton_profile_delete">
                         <property name="visible">True</property>
-                        <property name="can_focus">True</property>
-                        <property name="receives_default">True</property>
+                        <property name="sensitive">False</property>
+                        <property name="can_focus">False</property>
+                        <property name="has_tooltip">True</property>
+                        <property name="tooltip_markup" translatable="yes">Remove a profile from the device</property>
+                        <property name="tooltip_text">Remove a profile from the device</property>
                         <property name="use_action_appearance">False</property>
                         <property name="use_underline">True</property>
+                        <property name="icon_name">list-remove-symbolic</property>
                       </object>
                       <packing>
                         <property name="expand">False</property>
-                        <property name="fill">True</property>
-                        <property name="position">1</property>
+                        <property name="homogeneous">True</property>
                       </packing>
                     </child>
                   </object>
                   <packing>
                     <property name="expand">False</property>
-                    <property name="fill">False</property>
+                    <property name="fill">True</property>
                     <property name="position">1</property>
                   </packing>
                 </child>
