trivial: use the new 'dim-label' style for the type labels in gcm-viewer

--- a/data/gcm-viewer.ui
+++ b/data/gcm-viewer.ui
@@ -120,10 +120,7 @@
                               <object class="GtkLabel" id="label_title_type">
                                 <property name="visible">True</property>
                                 <property name="can_focus">False</property>
-                                <property name="label" translatable="yes" comments="The type of profile, e.g. display, scanner, etc.">Profile type:</property>
-                                <attributes>
-                                  <attribute name="weight" value="bold"/>
-                                </attributes>
+                                <property name="label" translatable="yes" comments="The type of profile, e.g. display, scanner, etc.">Profile type</property>
                               </object>
                               <packing>
                                 <property name="expand">False</property>
@@ -186,10 +183,7 @@
                               <object class="GtkLabel" id="label_title_colorspace">
                                 <property name="visible">True</property>
                                 <property name="can_focus">False</property>
-                                <property name="label" translatable="yes" comments="The profile colorspace, e.g. RGB">Colorspace:</property>
-                                <attributes>
-                                  <attribute name="weight" value="bold"/>
-                                </attributes>
+                                <property name="label" translatable="yes" comments="The profile colorspace, e.g. RGB">Colorspace</property>
                               </object>
                               <packing>
                                 <property name="expand">False</property>
@@ -252,10 +246,7 @@
                               <object class="GtkLabel" id="label_title_datetime">
                                 <property name="visible">True</property>
                                 <property name="can_focus">False</property>
-                                <property name="label" translatable="yes" comments="When the profile was created">Created:</property>
-                                <attributes>
-                                  <attribute name="weight" value="bold"/>
-                                </attributes>
+                                <property name="label" translatable="yes" comments="When the profile was created">Created</property>
                               </object>
                               <packing>
                                 <property name="expand">False</property>
@@ -319,10 +310,7 @@
                                 <property name="visible">True</property>
                                 <property name="can_focus">False</property>
                                 <property name="valign">start</property>
-                                <property name="label" translatable="yes" comments="The manufacturer of the profile">Device manufacturer:</property>
-                                <attributes>
-                                  <attribute name="weight" value="bold"/>
-                                </attributes>
+                                <property name="label" translatable="yes" comments="The manufacturer of the profile">Device manufacturer</property>
                               </object>
                               <packing>
                                 <property name="expand">False</property>
@@ -387,10 +375,7 @@
                                 <property name="visible">True</property>
                                 <property name="can_focus">False</property>
                                 <property name="valign">start</property>
-                                <property name="label" translatable="yes" comments="The manufacturer of the profile">Device model:</property>
-                                <attributes>
-                                  <attribute name="weight" value="bold"/>
-                                </attributes>
+                                <property name="label" translatable="yes" comments="The manufacturer of the profile">Device model</property>
                               </object>
                               <packing>
                                 <property name="expand">False</property>
@@ -454,10 +439,7 @@
                               <object class="GtkLabel" id="label_title_vcgt">
                                 <property name="visible">True</property>
                                 <property name="can_focus">False</property>
-                                <property name="label" translatable="yes" comments="If the profile contains a display correction table">Display correction:</property>
-                                <attributes>
-                                  <attribute name="weight" value="bold"/>
-                                </attributes>
+                                <property name="label" translatable="yes" comments="If the profile contains a display correction table">Display correction</property>
                               </object>
                               <packing>
                                 <property name="expand">False</property>
@@ -520,10 +502,7 @@
                               <object class="GtkLabel" id="label_title_temp">
                                 <property name="visible">True</property>
                                 <property name="can_focus">False</property>
-                                <property name="label" translatable="yes" comments="The basename (the last section of the filename) of the profile">White point:</property>
-                                <attributes>
-                                  <attribute name="weight" value="bold"/>
-                                </attributes>
+                                <property name="label" translatable="yes" comments="The basename (the last section of the filename) of the profile">White point</property>
                               </object>
                               <packing>
                                 <property name="expand">False</property>
@@ -588,10 +567,7 @@
                                 <property name="visible">True</property>
                                 <property name="can_focus">False</property>
                                 <property name="valign">start</property>
-                                <property name="label" translatable="yes" comments="The licence of the profile, normally non-free">License:</property>
-                                <attributes>
-                                  <attribute name="weight" value="bold"/>
-                                </attributes>
+                                <property name="label" translatable="yes" comments="The licence of the profile, normally non-free">License</property>
                               </object>
                               <packing>
                                 <property name="expand">False</property>
@@ -655,10 +631,7 @@
                               <object class="GtkLabel" id="label_title_size">
                                 <property name="visible">True</property>
                                 <property name="can_focus">False</property>
-                                <property name="label" translatable="yes" comments="The file size in bytes of the profile">File size:</property>
-                                <attributes>
-                                  <attribute name="weight" value="bold"/>
-                                </attributes>
+                                <property name="label" translatable="yes" comments="The file size in bytes of the profile">File size</property>
                               </object>
                               <packing>
                                 <property name="expand">False</property>
@@ -722,10 +695,7 @@
                                 <property name="visible">True</property>
                                 <property name="can_focus">False</property>
                                 <property name="valign">start</property>
-                                <property name="label" translatable="yes" comments="The basename (the last section of the filename) of the profile">Filename:</property>
-                                <attributes>
-                                  <attribute name="weight" value="bold"/>
-                                </attributes>
+                                <property name="label" translatable="yes" comments="The basename (the last section of the filename) of the profile">Filename</property>
                               </object>
                               <packing>
                                 <property name="expand">False</property>
