Add a show information button to the profile toolbar in gcm-prefs
This opens up gcm-viewer, but hides the profile panel on the left.

--- a/data/gcm-prefs.ui
+++ b/data/gcm-prefs.ui
@@ -365,6 +365,20 @@
                           </packing>
                         </child>
                         <child>
+                          <object class="GtkToolButton" id="toolbutton_profile_view">
+                            <property name="visible">True</property>
+                            <property name="can_focus">False</property>
+                            <property name="tooltip_text" translatable="yes">Show details about this profile</property>
+                            <property name="use_action_appearance">False</property>
+                            <property name="use_underline">True</property>
+                            <property name="icon_name">dialog-information-symbolic</property>
+                          </object>
+                          <packing>
+                            <property name="expand">False</property>
+                            <property name="homogeneous">True</property>
+                          </packing>
+                        </child>
+                        <child>
                           <object class="GtkToolButton" id="toolbutton_profile_default">
                             <property name="visible">True</property>
                             <property name="can_focus">False</property>
