trivial: add button text for all GtkToolButtons, the user may be hiding the icons by default

--- a/data/gcm-prefs.ui
+++ b/data/gcm-prefs.ui
@@ -236,6 +236,7 @@
                             <property name="can_focus">False</property>
                             <property name="tooltip_text">Add a virtual device</property>
                             <property name="use_action_appearance">False</property>
+                            <property name="label" translatable="yes">Add</property>
                             <property name="use_underline">True</property>
                             <property name="icon_name">list-add-symbolic</property>
                           </object>
@@ -251,6 +252,7 @@
                             <property name="can_focus">False</property>
                             <property name="tooltip_text">Remove a device</property>
                             <property name="use_action_appearance">False</property>
+                            <property name="label" translatable="yes">Remove</property>
                             <property name="use_underline">True</property>
                             <property name="icon_name">list-remove-symbolic</property>
                           </object>
@@ -265,6 +267,7 @@
                             <property name="can_focus">False</property>
                             <property name="tooltip_text">Set this device for all users on this computer</property>
                             <property name="use_action_appearance">False</property>
+                            <property name="label" translatable="yes">Set for all users</property>
                             <property name="use_underline">True</property>
                             <property name="icon_name">document-save-symbolic</property>
                           </object>
@@ -279,6 +282,7 @@
                             <property name="can_focus">False</property>
                             <property name="tooltip_text" translatable="yes">Calibrate the device</property>
                             <property name="use_action_appearance">False</property>
+                            <property name="label" translatable="yes">Calibrate</property>
                             <property name="use_underline">True</property>
                             <property name="icon_name">system-run-symbolic</property>
                           </object>
@@ -340,6 +344,7 @@
                             <property name="has_tooltip">True</property>
                             <property name="tooltip_text">Add a profile for the device</property>
                             <property name="use_action_appearance">False</property>
+                            <property name="label" translatable="yes">Add</property>
                             <property name="use_underline">True</property>
                             <property name="icon_name">list-add-symbolic</property>
                           </object>
@@ -356,6 +361,7 @@
                             <property name="has_tooltip">True</property>
                             <property name="tooltip_text">Remove a profile from the device</property>
                             <property name="use_action_appearance">False</property>
+                            <property name="label" translatable="yes">Remove</property>
                             <property name="use_underline">True</property>
                             <property name="icon_name">list-remove-symbolic</property>
                           </object>
@@ -370,6 +376,7 @@
                             <property name="can_focus">False</property>
                             <property name="tooltip_text" translatable="yes">Show details about this profile</property>
                             <property name="use_action_appearance">False</property>
+                            <property name="label" translatable="yes">View details</property>
                             <property name="use_underline">True</property>
                             <property name="icon_name">dialog-information-symbolic</property>
                           </object>
@@ -385,6 +392,7 @@
                             <property name="has_tooltip">True</property>
                             <property name="tooltip_text">Makes the profile default for the device</property>
                             <property name="use_action_appearance">False</property>
+                            <property name="label" translatable="yes">Set as default</property>
                             <property name="use_underline">True</property>
                             <property name="icon_name">emblem-default-symbolic</property>
                           </object>
