trivial: keep the [+] and [-] buttons on the left side of the toolbar, but punt the others to the RHS

--- a/data/gcm-prefs.ui
+++ b/data/gcm-prefs.ui
@@ -262,6 +262,17 @@
                           </packing>
                         </child>
                         <child>
+                          <object class="GtkSeparatorToolItem" id="toolbutton2">
+                            <property name="visible">True</property>
+                            <property name="can_focus">False</property>
+                            <property name="use_action_appearance">False</property>
+                          </object>
+                          <packing>
+                            <property name="expand">True</property>
+                            <property name="homogeneous">True</property>
+                          </packing>
+                        </child>
+                        <child>
                           <object class="GtkToolButton" id="toolbutton_device_default">
                             <property name="visible">True</property>
                             <property name="can_focus">False</property>
@@ -367,6 +378,17 @@
                           </object>
                           <packing>
                             <property name="expand">False</property>
+                            <property name="homogeneous">True</property>
+                          </packing>
+                        </child>
+                        <child>
+                          <object class="GtkSeparatorToolItem" id="toolbutton1">
+                            <property name="visible">True</property>
+                            <property name="can_focus">False</property>
+                            <property name="use_action_appearance">False</property>
+                          </object>
+                          <packing>
+                            <property name="expand">True</property>
                             <property name="homogeneous">True</property>
                           </packing>
                         </child>
