--- a/data/gcm-prefs.ui
+++ b/data/gcm-prefs.ui
@@ -278,9 +278,9 @@
                             <property name="can_focus">False</property>
                             <property name="tooltip_text">Set this device for all users on this computer</property>
                             <property name="use_action_appearance">False</property>
+                            <property name="is_important">True</property>
                             <property name="label" translatable="yes">Set for all users</property>
                             <property name="use_underline">True</property>
-                            <property name="icon_name">document-save-symbolic</property>
                           </object>
                           <packing>
                             <property name="expand">False</property>
@@ -293,9 +293,9 @@
                             <property name="can_focus">False</property>
                             <property name="tooltip_text" translatable="yes">Calibrate the device</property>
                             <property name="use_action_appearance">False</property>
+                            <property name="is_important">True</property>
                             <property name="label" translatable="yes">Calibrate</property>
                             <property name="use_underline">True</property>
-                            <property name="icon_name">system-run-symbolic</property>
                           </object>
                           <packing>
                             <property name="expand">False</property>
@@ -398,9 +398,9 @@
                             <property name="can_focus">False</property>
                             <property name="tooltip_text" translatable="yes">Show details about this profile</property>
                             <property name="use_action_appearance">False</property>
+                            <property name="is_important">True</property>
                             <property name="label" translatable="yes">View details</property>
                             <property name="use_underline">True</property>
-                            <property name="icon_name">dialog-information-symbolic</property>
                           </object>
                           <packing>
                             <property name="expand">False</property>
@@ -414,9 +414,9 @@
                             <property name="has_tooltip">True</property>
                             <property name="tooltip_text">Makes the profile default for the device</property>
                             <property name="use_action_appearance">False</property>
+                            <property name="is_important">True</property>
                             <property name="label" translatable="yes">Set as default</property>
                             <property name="use_underline">True</property>
-                            <property name="icon_name">emblem-default-symbolic</property>
                           </object>
                           <packing>
                             <property name="expand">False</property>
