trivial: do not make the device calibration a toggle-button

--- a/data/gcm-prefs.ui
+++ b/data/gcm-prefs.ui
@@ -288,7 +288,7 @@
                           </packing>
                         </child>
                         <child>
-                          <object class="GtkToggleToolButton" id="toolbutton_device_calibrate">
+                          <object class="GtkToolButton" id="toolbutton_device_calibrate">
                             <property name="visible">True</property>
                             <property name="can_focus">False</property>
                             <property name="tooltip_text" translatable="yes">Calibrate the device</property>
