--- a/data/gcm-viewer.ui
+++ b/data/gcm-viewer.ui
@@ -297,6 +297,71 @@
                       </packing>
                     </child>
                     <child>
+                      <object class="GtkHBox" id="hbox_version">
+                        <property name="visible">True</property>
+                        <property name="can_focus">False</property>
+                        <property name="spacing">12</property>
+                        <child>
+                          <object class="GtkHBox" id="hbox9">
+                            <property name="visible">True</property>
+                            <property name="can_focus">False</property>
+                            <child>
+                              <object class="GtkLabel" id="label_title_version">
+                                <property name="visible">True</property>
+                                <property name="can_focus">False</property>
+                                <property name="valign">start</property>
+                                <property name="label" translatable="yes" comments="The version of the profile">Version</property>
+                              </object>
+                              <packing>
+                                <property name="expand">False</property>
+                                <property name="fill">True</property>
+                                <property name="pack_type">end</property>
+                                <property name="position">0</property>
+                              </packing>
+                            </child>
+                          </object>
+                          <packing>
+                            <property name="expand">False</property>
+                            <property name="fill">True</property>
+                            <property name="position">0</property>
+                          </packing>
+                        </child>
+                        <child>
+                          <object class="GtkHBox" id="hbox13">
+                            <property name="visible">True</property>
+                            <property name="can_focus">False</property>
+                            <child>
+                              <object class="GtkLabel" id="label_version">
+                                <property name="visible">True</property>
+                                <property name="can_focus">False</property>
+                                <property name="label">1.00</property>
+                                <property name="use_markup">True</property>
+                                <property name="wrap">True</property>
+                                <property name="wrap_mode">char</property>
+                                <property name="selectable">True</property>
+                              </object>
+                              <packing>
+                                <property name="expand">False</property>
+                                <property name="fill">True</property>
+                                <property name="position">0</property>
+                              </packing>
+                            </child>
+                          </object>
+                          <packing>
+                            <property name="expand">False</property>
+                            <property name="fill">True</property>
+                            <property name="position">1</property>
+                          </packing>
+                        </child>
+                      </object>
+                      <packing>
+                        <property name="expand">False</property>
+                        <property name="fill">False</property>
+                        <property name="padding">3</property>
+                        <property name="position">3</property>
+                      </packing>
+                    </child>
+                    <child>
                       <object class="GtkHBox" id="hbox_profile_manufacturer">
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
@@ -358,7 +423,7 @@
                         <property name="expand">False</property>
                         <property name="fill">False</property>
                         <property name="padding">3</property>
-                        <property name="position">3</property>
+                        <property name="position">4</property>
                       </packing>
                     </child>
                     <child>
@@ -423,7 +488,7 @@
                         <property name="expand">False</property>
                         <property name="fill">False</property>
                         <property name="padding">3</property>
-                        <property name="position">4</property>
+                        <property name="position">5</property>
                       </packing>
                     </child>
                     <child>
@@ -486,7 +551,7 @@
                         <property name="expand">False</property>
                         <property name="fill">False</property>
                         <property name="padding">3</property>
-                        <property name="position">5</property>
+                        <property name="position">6</property>
                       </packing>
                     </child>
                     <child>
@@ -550,7 +615,7 @@
                         <property name="expand">False</property>
                         <property name="fill">False</property>
                         <property name="padding">3</property>
-                        <property name="position">6</property>
+                        <property name="position">7</property>
                       </packing>
                     </child>
                     <child>
@@ -615,7 +680,7 @@
                         <property name="expand">False</property>
                         <property name="fill">False</property>
                         <property name="padding">3</property>
-                        <property name="position">7</property>
+                        <property name="position">8</property>
                       </packing>
                     </child>
                     <child>
@@ -678,7 +743,7 @@
                         <property name="expand">False</property>
                         <property name="fill">False</property>
                         <property name="padding">3</property>
-                        <property name="position">8</property>
+                        <property name="position">9</property>
                       </packing>
                     </child>
                     <child>
@@ -743,7 +808,7 @@
                         <property name="expand">False</property>
                         <property name="fill">False</property>
                         <property name="padding">3</property>
-                        <property name="position">9</property>
+                        <property name="position">10</property>
                       </packing>
                     </child>
                   </object>
@@ -1421,6 +1486,7 @@
       <widget name="hbox12"/>
       <widget name="hbox31"/>
       <widget name="hbox33"/>
+      <widget name="hbox9"/>
     </widgets>
   </object>
 </interface>
