trivial: Add an ellipsis to the Calibrate button

--- a/data/gcm-prefs.ui
+++ b/data/gcm-prefs.ui
@@ -326,7 +326,7 @@
                     <property name="tooltip_text" translatable="yes">Calibrate the device</property>
                     <property name="use_action_appearance">False</property>
                     <property name="is_important">True</property>
-                    <property name="label" translatable="yes">Calibrate</property>
+                    <property name="label" translatable="yes">Calibrate…</property>
                     <property name="use_underline">True</property>
                   </object>
                   <packing>
