trivial: remove the Management suffix in the UI

--- a/data/gcm-prefs.ui
+++ b/data/gcm-prefs.ui
@@ -160,7 +160,7 @@
   <object class="GtkWindow" id="dialog_prefs">
     <property name="can_focus">False</property>
     <property name="border_width">12</property>
-    <property name="title" translatable="yes">Color Management</property>
+    <property name="title" translatable="yes">Color</property>
     <property name="window_position">center</property>
     <property name="icon_name">preferences-system</property>
     <child>
